<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_black"
    tools:context=".activity.SelectMatrixActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_go_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/font_12"
            app:layout_constraintBottom_toTopOf="@id/grid_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/success_msg"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="@dimen/density_250"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/density_10"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="@dimen/font_26"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/grid_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_go_to_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/success_msg"
            android:layout_width="@dimen/density_250"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/density_10"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/grid_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_go_to_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/density_80"
            android:background="@color/black"
            android:columnCount="4"
            android:rowCount="4"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/view_1"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/red" />

            <ImageView
                android:id="@+id/view_2"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/green" />

            <ImageView
                android:id="@+id/view_3"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/blue" />

            <ImageView
                android:id="@+id/view_4"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/yellow" />

            <ImageView
                android:id="@+id/view_5"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/red" />

            <ImageView
                android:id="@+id/view_6"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/green" />

            <ImageView
                android:id="@+id/view_7"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/blue" />

            <ImageView
                android:id="@+id/view_8"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/yellow" />


            <ImageView
                android:id="@+id/view_9"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/red" />

            <ImageView
                android:id="@+id/view_10"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/green" />

            <ImageView
                android:id="@+id/view_11"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/blue" />

            <ImageView
                android:id="@+id/view_12"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/yellow" />

            <ImageView
                android:id="@+id/view_13"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/red" />

            <ImageView
                android:id="@+id/view_14"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/green" />

            <ImageView
                android:id="@+id/view_15"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/blue" />

            <ImageView
                android:id="@+id/view_16"
                android:layout_width="@dimen/density_80"
                android:layout_height="@dimen/density_80"
                android:layout_margin="@dimen/density_1"
                android:background="@color/yellow" />
        </GridLayout>

        <Button
            android:id="@+id/btn_scramble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/density_8"
            android:background="@drawable/bg_orange_radius_corner"
            android:padding="@dimen/density_8"
            android:text="@string/scramble"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_start_timer"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/grid_layout"
            app:layout_constraintVertical_bias="0.13" />

        <Button
            android:id="@+id/btn_start_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/density_8"
            android:background="@drawable/bg_orange_radius_corner"
            android:padding="@dimen/density_8"
            android:text="@string/timer_start"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_scramble"
            app:layout_constraintTop_toBottomOf="@id/grid_layout"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/score_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/density_10"
            android:background="@color/bg_black"
            android:gravity="center"
            android:padding="@dimen/density_5"
            android:text="@string/score_board"
            android:textColor="@color/yellow"
            android:textSize="@dimen/font_20"
            app:layout_constraintBottom_toTopOf="@id/card_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_scramble" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_black"
            android:elevation="@dimen/density_8"
            app:layout_constraintBottom_toTopOf="@id/recycle_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/score_board"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_black">

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/density_8"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18"
                    app:layout_constraintEnd_toStartOf="@+id/tv_time"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/density_8"
                    android:text="Time"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18"
                    app:layout_constraintEnd_toStartOf="@+id/tv_score"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_status"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/density_8"
                    android:text="@string/score"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_time"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/density_4"
            android:background="@color/bg_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>